--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "embla-carousel": "^8.1.5",
     "embla-carousel-autoplay": "^8.1.5",
     "embla-carousel-react": "^8.1.5",
+    "formik": "^2.4.6",
     "next": "14.2.3",
     "nodemailer": "^6.9.13",
     "react": "^18",
@@ -21,7 +22,8 @@
     "react-icons": "^5.2.1",
     "react-slick": "^0.30.2",
     "react-toastify": "^10.0.5",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "eslint": "^8",
