--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "14.2.3",
     "nodemailer": "^6.9.13",
     "react": "^18",
+    "react-chrono": "^2.6.1",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-phone-input-2": "^2.15.1",
